content/infra/k8s-install/assets/kubeflow/kubeflow-notebooks/overlays/istio/kubeflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeflow-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: kubeflow-centraldashboard.k8s.demo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: istio-ingressgateway
                port:
                  number: 80
  tls:
    - hosts:
        - kubeflow-centraldashboard.k8s.demo
      secretName: kubeflow-centraldashboard-tls
